# expressions-differentiator

./: .gitignore  CMakeLists.txt  README.md  derivatives_generator.py  functions.cpp  main.cpp
headers/: DerivativesDefines.h  DifferentiateTree.h  DotFileFromTreeGenerator.h  ExpressionNode.hpp  ExpressionTree.h  NodesIdentifierSingleton.h  ReversePolishNotationGenerator.h  StaticAllocator.hpp  Token.h  Tokenizer.h
sources/: DifferentiateTree.cpp  DotFileFromTreeGenerator.cpp  ExpressionTree.cpp  NodesIdentifierSingleton.cpp  ReversePolishNotationGenerator.cpp  Token.cpp  Tokenizer.cpp
